# AI-Annotation

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  AUTODETECTION_WORKFLOW.md  CONTRIBUTING.md  DELIVERY_MANIFEST.md  EXTENSION_TEST_PLAN.md  EXTENSION_UPDATE_GUIDE.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  TEST_RESULTS.md  pyproject.toml  tmpclaude-8332-cwd
.github/workflows/: validate-ai-code.yml
docs/: ANNOTATION_FORMAT.md  ARCHITECTURE.md
src/python-validator/: pyproject.toml  tmpclaude-4ed1-cwd
src/python-validator/src/ai_code_validator/: __init__.py  cli.py  config.py  parser.py  reporter.py  scanner.py
src/python-validator/tests/: test_cli.py  test_parser.py  test_reporter.py  test_scanner.py
src/vscode-extension/: ai-code-annotator-1.0.0.vsix  package.json  tsconfig.json
src/vscode-extension/src/: annotationHandler.ts  editorListener.ts  extension.ts  promptManager.ts  types.ts
src/vscode-extension/test/: annotationHandler.test.ts  editorListener.test.ts  promptManager.test.ts
tests/: invalid_annotations.py  valid_annotations.js  valid_annotations.py
